# AssemblyLine

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  Changelog  LICENSE  Makefile.am  README.md  TROUBLESHOOTING.md  _config.yml  action.yml  actions.yml  assemblyline.pc.in  autogen.sh  compile_flags.txt  configure.ac  libassemblyline.pc.in
.github/: Invoke-VS.ps1
.github/workflows/: build.yml  c-check.yml  clang-format-check.yml
data/completion/: _asmline  asmline
man/: asmline.1  libassemblyline.3
src/: CMakeLists.txt  Makefile.am  README.md  assembler.c  assembler.h  assemblyline.c  assemblyline.h  common.h  config.h.in  encoder.c  encoder.h  enums.h  instr_parser.c  instr_parser.h  instruction_data.h  instructions.c  instructions.h  libassemblyline.2  libassemblyline.3  parser.c  parser.h  prefix.c  prefix.h  reg_parser.c  reg_parser.h  registers.c  registers.h  supported_instructions.h  tokenizer.c  tokenizer.h
test/: CMakeLists.txt  MOV_REG_IMM.asm  Makefile.am  adc.asm  adcx.asm  add.asm  adox.asm  al_nasm_compare.sh  and.asm  asm_to_stdout.c  bextr.asm  bzhi.asm  check_chunk_counting.c  clc.asm  clflush.asm  cmp.asm  compile_asm.c  compile_asm.c.in  cpuid.asm  gp_to_vector_register.asm  high_low_xmm.asm  imul.asm  invalid.c  jmp.asm  jump.c  lea.asm  lea_no_base.asm  memory_reallocation.c  mov.asm  mov_reg_imm.asm  mov_reg_imm32.asm  movd.asm  movntdqa.asm  movntq.asm  movq.asm  movzx.asm  mul.asm  mulx.asm  neg.asm  negative_mem_disp.asm  (+69 more)
test/eaf/: imul.eaf
test/inc/: test_MOV_REG_IMM.h  test_adc.h  test_adcx.h  test_add.h  test_adox.h  test_and.h  test_bextr.h  test_bzhi.h  test_clc.h  test_cmp.h  test_high_low_xmm.h  test_imul.h  test_lea.h  test_lea_no_base.h  test_mov.h  test_mov_reg_imm32.h  test_movd.h  test_movntdqa.h  test_movntq.h  test_movq.h  test_movzx.h  test_mulx.h  test_negative_mem_disp.h  test_new_instruction.h  test_no_ptr.h  test_nop.h  test_not.h  test_or.h  test_paddb.h  test_paddd.h  test_paddq.h  test_paddw.h  test_pand.h  test_pmuldq.h  test_pmulhuw.h  test_pmulhw.h  test_pmulld.h  test_pmullq.h  test_pmullw.h  test_pmuludq.h  (+40 more)
test/tap/: call.tap  cmp.tap  compiler.sh  imul.tap  lea.tap  misc.eaf  misc.tap  movq.tap  nasm_incompatible.tap  tap_example.tap  vmovdqu.tap  vmovupd.tap  xor.tap
test/tools/: asmline.sh  asmlineP.sh
tools/: CMakeLists.txt  Makefile.am  README.md  asmline.1  asmline.c
