AM_CFLAGS = -Wall -std=gnu99
noinst_LTLIBRARIES = libassemblyline.la
libassemblyline_la_SOURCES = \
							 assembler.c \
							 assembler.h \
							 encoder.c \
							 encoder.h \
							 parser.c \
							 parser.h \
							 prefix.c \
							 prefix.h \
							 tokenizer.c \
							 tokenizer.h \
							 assemblyline.c \
							 common.h \
							 enums.h \
							 instr_parser.c \
							 instr_parser.h \
							 instruction_data.h \
							 instructions.h \
							 reg_parser.c \
							 reg_parser.h \
							 instructions.c \
							 registers.h

include_HEADERS = assemblyline.h

