AM_CFLAGS = -Wall -std=gnu99
noinst_LTLIBRARIES = libassemblyline.la
libassemblyline_la_SOURCES = \
							 assembler.c \
							 assembler.h \
							 assemblyline.c \
							 common.h \
							 encoder.c \
							 encoder.h \
							 enums.h \
							 instr_parser.c \
							 instr_parser.h \
							 instruction_data.h \
							 instructions.c \
							 instructions.h \
							 parser.c \
							 parser.h \
							 prefix.c \
							 prefix.h \
							 reg_parser.c \
							 reg_parser.h \
							 registers.h \
							 tokenizer.c \
							 tokenizer.h

include_HEADERS = assemblyline.h

