## Copyright 2021 University of Adelaide

## Licensed under the Apache License, Version 2.0 (the "License");
## you may not use this file except in compliance with the License.
## You may obtain a copy of the License at

##    http://www.apache.org/licenses/LICENSE-2.0

## Unless required by applicable law or agreed to in writing, software
## distributed under the License is distributed on an "AS IS" BASIS,
## WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
## See the License for the specific language governing permissions and
## limitations under the License.

AM_CFLAGS = -Wall -std=gnu99
noinst_LTLIBRARIES = libassemblyline.la
libassemblyline_la_SOURCES = \
							 assembler.c \
							 assembler.h \
							 assemblyline.c \
							 common.h \
							 encoder.c \
							 encoder.h \
							 enums.h \
							 instr_parser.c \
							 instr_parser.h \
							 instruction_data.h \
							 instructions.c \
							 instructions.h \
							 parser.c \
							 parser.h \
							 prefix.c \
							 prefix.h \
							 reg_parser.c \
							 reg_parser.h \
							 registers.h \
							 tokenizer.c \
							 tokenizer.h

include_HEADERS = assemblyline.h

